<resources>
    <!-- Main -->
    <string name="app_name">Utilities</string>
    <string name="main_title">UTILITIES</string>
    <string name="calc">CALCULATOR</string>
    <string name="memo">MEMO</string>
    <string name="unit">UNIT CONVERTER</string>
    <string name="maps">GOOGLE MAPS</string>
    <string name="search">SEARCH</string>
    <string name="gallery">GALLERY</string>
    <string name="title_activity_maps">Map</string>

    <!-- Calculator -->
    <string name="calc_title">CALCULATOR</string>
    <string name="btn_1">１</string>
    <string name="btn_2">２</string>
    <string name="btn_3">３</string>
    <string name="btn_4">４</string>
    <string name="btn_5">５</string>
    <string name="btn_6">６</string>
    <string name="btn_7">７</string>
    <string name="btn_8">８</string>
    <string name="btn_9">９</string>
    <string name="btn_0">０</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_multiply">×</string>
    <string name="btn_divide">÷</string>
    <string name="btn_plusMinus">±</string>
    <string name="btn_dot">．</string>
    <string name="btn_C">Ｃ</string>
    <string name="btn_back">←</string>
    <string name="btn_result">＝</string>

    <!-- Unit Converter -->
    <string name="unit_title">UNIT CONVERTER</string>
    <string name="btn_length">길이</string>
    <string name="btn_weight">무게</string>
    <string name="btn_area">넓이</string>
    <string name="btn_temp">온도</string>
    <string name="input_number">input number</string>
    <string name="unit_mm">mm</string>
    <string name="unit_cm">cm</string>
    <string name="unit_m">m</string>
    <string name="unit_km">km</string>
    <string name="unit_inch">inch</string>
    <string name="unit_ft">ft</string>
    <string name="unit_yd">yd</string>
    <string name="unit_mile"> mile</string>
    <string name="unit_mg">mg</string>
    <string name="unit_g">g</string>
    <string name="unit_kg">kg</string>
    <string name="unit_ton">t</string>
    <string name="unit_kt">kt</string>
    <string name="unit_lb">lb</string>
    <string name="unit_gr">gr</string>
    <string name="unit_oz">oz</string>
    <string name="unit_m2">m²</string>
    <string name="unit_km2">km²</string>
    <string name="unit_ft2">ft²</string>
    <string name="unit_yd2">yd²</string>
    <string name="unit_a">a</string>
    <string name="unit_ha">ha</string>
    <string name="unit_ac">ac</string>
    <string name="unit_pyeong">평</string>
    <string name="unit_Cel">°C</string>
    <string name="unit_Fah">°F</string>
    <string name="unit_Kel">K</string>
    <string name="unit_Ran">°R</string>

    <!-- Gallery -->
    <string name="gallery_title">GALLERY</string>
    <string name="imgInfo">상세 정보</string>
    <string name="imgInfo_title">제목：</string>
    <string name="imgInfo_size">크기：</string>
    <string name="imgInfo_date">날짜：</string>
    <string name="imgInfo_path">경로：</string>

    <!-- Memo -->
    <string name="memo_title">MEMO</string>

    <!-- common -->
    <string name="_0">0</string>

</resources>