<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="2dp"
        android:background="@drawable/bg_simple">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/main_title"
            android:textSize="@android:dimen/app_icon_size"/>
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/bg_simple">
                <Button
                    android:id="@+id/button_calc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_calculator"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:text="@string/calc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:gravity="center"
                    android:layout_gravity="center|bottom"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/bg_simple">
                <Button
                    android:id="@+id/button_memo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="5dp"
                    android:src="@drawable/icon_memo"
                    android:scaleType="fitXY"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:text="@string/memo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:gravity="center"
                    android:layout_gravity="center|bottom"/>
            </FrameLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/bg_simple" >
                <Button
                    android:id="@+id/button_unit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_calculator"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:text="@string/unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center|bottom"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/bg_simple" >
                <Button
                    android:id="@+id/button_maps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"/>
                <ImageView
                    android:src="@drawable/icon_map"
                    android:scaleType="fitXY"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:text="@string/maps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center|bottom"/>
            </FrameLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/bg_simple" >
                <Button
                    android:id="@+id/button_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_search"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:text="@string/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center|bottom"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/bg_simple" >
                <Button
                    android:id="@+id/button_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"/>
                <ImageView
                    android:src="@drawable/icon_gallery"
                    android:scaleType="fitXY"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:text="@string/gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center|bottom"/>
            </FrameLayout>
        </TableRow>

    </TableLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="2dp"
        android:background="@drawable/bg_simple">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Utilities"/>
    </RelativeLayout>

</LinearLayout>